Geometrik/LexerParser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    TRUE
    STRING
    BREAK
    ELSE
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON programvars programfunction main
Rule 2     program -> assignment
Rule 3     program -> read
Rule 4     main -> INTTYPE MAIN LPAREN RPAREN block
Rule 5     programvars -> vars programvars
Rule 6     programvars -> empty
Rule 7     programfunction -> function programfunction
Rule 8     programfunction -> empty
Rule 9     block -> LBRACE blockprima RBRACE
Rule 10    blockprima -> statute blockprima
Rule 11    blockprima -> empty
Rule 12    statute -> assignment
Rule 13    statute -> condition
Rule 14    statute -> write
Rule 15    statute -> read
Rule 16    statute -> cycle
Rule 17    statute -> functioncall
Rule 18    statute -> predefined
Rule 19    statute -> return
Rule 20    condition -> IF LPAREN conditionprima RPAREN block
Rule 21    conditionprima -> condprimaaux
Rule 22    conditionprima -> NOT condprimaaux
Rule 23    condprimaaux -> functioncall
Rule 24    condprimaaux -> singularexp2
Rule 25    vars -> VAR type varsprima SEMICOLON
Rule 26    varsprima -> ID
Rule 27    varsprima -> ID COMMA varsprima
Rule 28    varsprima -> empty
Rule 29    type -> INTTYPE
Rule 30    type -> FLOATTYPE
Rule 31    type -> STRINGTYPE
Rule 32    type -> BOOLEANTYPE
Rule 33    type -> array
Rule 34    array -> INTTYPE arrayprima
Rule 35    array -> FLOATTYPE arrayprima
Rule 36    array -> STRINGTYPE arrayprima
Rule 37    arrayprima -> LBRACKET INT RBRACKET
Rule 38    assignment -> ID push_id_operand ASSIGN push_operator singularexp2 SEMICOLON
Rule 39    push_id_operand -> <empty>
Rule 40    push_operator -> <empty>
Rule 41    assignmentarray -> empty
Rule 42    assignmentarray -> LBRACKET singularexp2 RBRACKET
Rule 43    assignmentprima -> functioncall
Rule 44    assignmentprima -> singularexp2
Rule 45    singularexp2 -> singularexp
Rule 46    singularexp2 -> NOT singularexp
Rule 47    singularexp -> singularexp AND expression
Rule 48    singularexp -> singularexp OR expression
Rule 49    singularexp -> expression
Rule 50    expression -> expression LESSER exp
Rule 51    expression -> expression GREATER exp
Rule 52    expression -> expression EQUAL exp
Rule 53    expression -> expression NOTEQUAL exp
Rule 54    expression -> expression LESSEROREQUAL exp
Rule 55    expression -> expression GREATEROREQUAL exp
Rule 56    expression -> exp
Rule 57    exp -> exp PLUS term
Rule 58    exp -> exp MINUS term
Rule 59    exp -> term
Rule 60    term -> term TIMES factor
Rule 61    term -> term DEVIDE factor
Rule 62    term -> factor
Rule 63    factor -> LPAREN singularexp2 RPAREN
Rule 64    factor -> PLUS constant
Rule 65    factor -> MINUS constant
Rule 66    factor -> constant
Rule 67    constant -> ID constantprima
Rule 68    constant -> FLOAT
Rule 69    constant -> INT
Rule 70    constantprima -> empty
Rule 71    constantprima -> LBRACKET singularexp2 RBRACKET
Rule 72    functioncall -> ID LPAREN funcparam RPAREN SEMICOLON
Rule 73    funcparam -> empty
Rule 74    funcparam -> singularexp2
Rule 75    funcparam -> singularexp COMMA funcparam
Rule 76    function -> FUNCTION VOID ID LPAREN parameter RPAREN block
Rule 77    function -> FUNCTION type ID LPAREN parameter RPAREN block
Rule 78    return -> RETURN singularexp2 SEMICOLON
Rule 79    parameter -> empty
Rule 80    parameter -> parameterprima
Rule 81    parameterprima -> type ID
Rule 82    parameterprima -> type ID COMMA parameterprima
Rule 83    write -> PRINT LPAREN singularexp2 RPAREN SEMICOLON
Rule 84    read -> ID push_id_operand ASSIGN push_operator INPUT SEMICOLON
Rule 85    cycle -> WHILE LPAREN singularexp2 RPAREN block
Rule 86    color -> BLUE
Rule 87    color -> GREEN
Rule 88    color -> RED
Rule 89    color -> YELLOW
Rule 90    color -> BROWN
Rule 91    color -> BLACK
Rule 92    predefined -> drawline
Rule 93    predefined -> drawsquare
Rule 94    predefined -> drawtriangle
Rule 95    predefined -> drawcircle
Rule 96    predefined -> drawcurve
Rule 97    predefined -> drawpolygon
Rule 98    drawline -> DRAWLINE LPAREN singularexp2 COMMA singularexp2 COMMA singularexp2 COMMA singularexp2 COMMA color RPAREN SEMICOLON
Rule 99    drawsquare -> DRAWSQUARE LPAREN singularexp2 COMMA singularexp2 COMMA color RPAREN SEMICOLON
Rule 100   drawtriangle -> DRAWTRIANGLE LPAREN singularexp2 COMMA singularexp2 COMMA color RPAREN SEMICOLON
Rule 101   drawcircle -> DRAWCIRCLE LPAREN singularexp2 COMMA singularexp2 COMMA color RPAREN SEMICOLON
Rule 102   drawcurve -> DRAWCURVE LPAREN singularexp2 COMMA singularexp2 COMMA color RPAREN SEMICOLON
Rule 103   drawpolygon -> DRAWPOLYGON LPAREN singularexp2 COMMA singularexp2 COMMA color RPAREN SEMICOLON
Rule 104   empty -> <empty>

Terminals, with rules where they appear

AND                  : 47
ASSIGN               : 38 84
BLACK                : 91
BLUE                 : 86
BOOLEANTYPE          : 32
BREAK                : 
BROWN                : 90
COLON                : 
COMMA                : 27 75 82 98 98 98 98 99 99 100 100 101 101 102 102 103 103
DEVIDE               : 61
DRAWCIRCLE           : 101
DRAWCURVE            : 102
DRAWLINE             : 98
DRAWPOLYGON          : 103
DRAWSQUARE           : 99
DRAWTRIANGLE         : 100
ELSE                 : 
EQUAL                : 52
FALSE                : 
FLOAT                : 68
FLOATTYPE            : 30 35
FUNCTION             : 76 77
GREATER              : 51
GREATEROREQUAL       : 55
GREEN                : 87
ID                   : 1 26 27 38 67 72 76 77 81 82 84
IF                   : 20
INPUT                : 84
INT                  : 37 69
INTTYPE              : 4 29 34
LBRACE               : 9
LBRACKET             : 37 42 71
LESSER               : 50
LESSEROREQUAL        : 54
LPAREN               : 4 20 63 72 76 77 83 85 98 99 100 101 102 103
MAIN                 : 4
MINUS                : 58 65
NOT                  : 22 46
NOTEQUAL             : 53
OR                   : 48
PLUS                 : 57 64
PRINT                : 83
PROGRAM              : 1
RBRACE               : 9
RBRACKET             : 37 42 71
RED                  : 88
RETURN               : 78
RPAREN               : 4 20 63 72 76 77 83 85 98 99 100 101 102 103
SEMICOLON            : 1 25 38 72 78 83 84 98 99 100 101 102 103
STRING               : 
STRINGTYPE           : 31 36
TIMES                : 60
TRUE                 : 
VAR                  : 25
VOID                 : 76
WHILE                : 85
YELLOW               : 89
error                : 

Nonterminals, with rules where they appear

array                : 33
arrayprima           : 34 35 36
assignment           : 2 12
assignmentarray      : 
assignmentprima      : 
block                : 4 20 76 77 85
blockprima           : 9 10
color                : 98 99 100 101 102 103
condition            : 13
conditionprima       : 20
condprimaaux         : 21 22
constant             : 64 65 66
constantprima        : 67
cycle                : 16
drawcircle           : 95
drawcurve            : 96
drawline             : 92
drawpolygon          : 97
drawsquare           : 93
drawtriangle         : 94
empty                : 6 8 11 28 41 70 73 79
exp                  : 50 51 52 53 54 55 56 57 58
expression           : 47 48 49 50 51 52 53 54 55
factor               : 60 61 62
funcparam            : 72 75
function             : 7
functioncall         : 17 23 43
main                 : 1
parameter            : 76 77
parameterprima       : 80 82
predefined           : 18
program              : 0
programfunction      : 1 7
programvars          : 1 5
push_id_operand      : 38 84
push_operator        : 38 84
read                 : 3 15
return               : 19
singularexp          : 45 46 47 48 75
singularexp2         : 24 38 42 44 63 71 74 78 83 85 98 98 98 98 99 99 100 100 101 101 102 102 103 103
statute              : 10
term                 : 57 58 59 60 61
type                 : 25 77 81 82
vars                 : 5
varsprima            : 25 27
write                : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON programvars programfunction main
    (2) program -> . assignment
    (3) program -> . read
    (38) assignment -> . ID push_id_operand ASSIGN push_operator singularexp2 SEMICOLON
    (84) read -> . ID push_id_operand ASSIGN push_operator INPUT SEMICOLON

    PROGRAM         shift and go to state 4
    ID              shift and go to state 5

    program                        shift and go to state 1
    read                           shift and go to state 2
    assignment                     shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (3) program -> read .

    $end            reduce using rule 3 (program -> read .)


state 3

    (2) program -> assignment .

    $end            reduce using rule 2 (program -> assignment .)


state 4

    (1) program -> PROGRAM . ID SEMICOLON programvars programfunction main

    ID              shift and go to state 6


state 5

    (38) assignment -> ID . push_id_operand ASSIGN push_operator singularexp2 SEMICOLON
    (84) read -> ID . push_id_operand ASSIGN push_operator INPUT SEMICOLON
    (39) push_id_operand -> .

    ASSIGN          reduce using rule 39 (push_id_operand -> .)

    push_id_operand                shift and go to state 7

state 6

    (1) program -> PROGRAM ID . SEMICOLON programvars programfunction main

    SEMICOLON       shift and go to state 8


state 7

    (38) assignment -> ID push_id_operand . ASSIGN push_operator singularexp2 SEMICOLON
    (84) read -> ID push_id_operand . ASSIGN push_operator INPUT SEMICOLON

    ASSIGN          shift and go to state 9


state 8

    (1) program -> PROGRAM ID SEMICOLON . programvars programfunction main
    (5) programvars -> . vars programvars
    (6) programvars -> . empty
    (25) vars -> . VAR type varsprima SEMICOLON
    (104) empty -> .

    VAR             shift and go to state 11
    FUNCTION        reduce using rule 104 (empty -> .)
    INTTYPE         reduce using rule 104 (empty -> .)

    vars                           shift and go to state 10
    programvars                    shift and go to state 12
    empty                          shift and go to state 13

state 9

    (38) assignment -> ID push_id_operand ASSIGN . push_operator singularexp2 SEMICOLON
    (84) read -> ID push_id_operand ASSIGN . push_operator INPUT SEMICOLON
    (40) push_operator -> .

    INPUT           reduce using rule 40 (push_operator -> .)
    NOT             reduce using rule 40 (push_operator -> .)
    LPAREN          reduce using rule 40 (push_operator -> .)
    PLUS            reduce using rule 40 (push_operator -> .)
    MINUS           reduce using rule 40 (push_operator -> .)
    ID              reduce using rule 40 (push_operator -> .)
    FLOAT           reduce using rule 40 (push_operator -> .)
    INT             reduce using rule 40 (push_operator -> .)

    push_operator                  shift and go to state 14

state 10

    (5) programvars -> vars . programvars
    (5) programvars -> . vars programvars
    (6) programvars -> . empty
    (25) vars -> . VAR type varsprima SEMICOLON
    (104) empty -> .

    VAR             shift and go to state 11
    FUNCTION        reduce using rule 104 (empty -> .)
    INTTYPE         reduce using rule 104 (empty -> .)

    empty                          shift and go to state 13
    programvars                    shift and go to state 15
    vars                           shift and go to state 10

state 11

    (25) vars -> VAR . type varsprima SEMICOLON
    (29) type -> . INTTYPE
    (30) type -> . FLOATTYPE
    (31) type -> . STRINGTYPE
    (32) type -> . BOOLEANTYPE
    (33) type -> . array
    (34) array -> . INTTYPE arrayprima
    (35) array -> . FLOATTYPE arrayprima
    (36) array -> . STRINGTYPE arrayprima

    INTTYPE         shift and go to state 17
    FLOATTYPE       shift and go to state 18
    STRINGTYPE      shift and go to state 16
    BOOLEANTYPE     shift and go to state 19

    type                           shift and go to state 20
    array                          shift and go to state 21

state 12

    (1) program -> PROGRAM ID SEMICOLON programvars . programfunction main
    (7) programfunction -> . function programfunction
    (8) programfunction -> . empty
    (76) function -> . FUNCTION VOID ID LPAREN parameter RPAREN block
    (77) function -> . FUNCTION type ID LPAREN parameter RPAREN block
    (104) empty -> .

    FUNCTION        shift and go to state 23
    INTTYPE         reduce using rule 104 (empty -> .)

    function                       shift and go to state 22
    programfunction                shift and go to state 24
    empty                          shift and go to state 25

state 13

    (6) programvars -> empty .

    FUNCTION        reduce using rule 6 (programvars -> empty .)
    INTTYPE         reduce using rule 6 (programvars -> empty .)


state 14

    (38) assignment -> ID push_id_operand ASSIGN push_operator . singularexp2 SEMICOLON
    (84) read -> ID push_id_operand ASSIGN push_operator . INPUT SEMICOLON
    (45) singularexp2 -> . singularexp
    (46) singularexp2 -> . NOT singularexp
    (47) singularexp -> . singularexp AND expression
    (48) singularexp -> . singularexp OR expression
    (49) singularexp -> . expression
    (50) expression -> . expression LESSER exp
    (51) expression -> . expression GREATER exp
    (52) expression -> . expression EQUAL exp
    (53) expression -> . expression NOTEQUAL exp
    (54) expression -> . expression LESSEROREQUAL exp
    (55) expression -> . expression GREATEROREQUAL exp
    (56) expression -> . exp
    (57) exp -> . exp PLUS term
    (58) exp -> . exp MINUS term
    (59) exp -> . term
    (60) term -> . term TIMES factor
    (61) term -> . term DEVIDE factor
    (62) term -> . factor
    (63) factor -> . LPAREN singularexp2 RPAREN
    (64) factor -> . PLUS constant
    (65) factor -> . MINUS constant
    (66) factor -> . constant
    (67) constant -> . ID constantprima
    (68) constant -> . FLOAT
    (69) constant -> . INT

    INPUT           shift and go to state 33
    NOT             shift and go to state 39
    LPAREN          shift and go to state 32
    PLUS            shift and go to state 30
    MINUS           shift and go to state 29
    ID              shift and go to state 34
    FLOAT           shift and go to state 37
    INT             shift and go to state 36

    term                           shift and go to state 35
    constant                       shift and go to state 26
    singularexp2                   shift and go to state 27
    exp                            shift and go to state 38
    factor                         shift and go to state 31
    singularexp                    shift and go to state 28
    expression                     shift and go to state 40

state 15

    (5) programvars -> vars programvars .

    FUNCTION        reduce using rule 5 (programvars -> vars programvars .)
    INTTYPE         reduce using rule 5 (programvars -> vars programvars .)


state 16

    (31) type -> STRINGTYPE .
    (36) array -> STRINGTYPE . arrayprima
    (37) arrayprima -> . LBRACKET INT RBRACKET

    ID              reduce using rule 31 (type -> STRINGTYPE .)
    SEMICOLON       reduce using rule 31 (type -> STRINGTYPE .)
    LBRACKET        shift and go to state 41

    arrayprima                     shift and go to state 42

state 17

    (29) type -> INTTYPE .
    (34) array -> INTTYPE . arrayprima
    (37) arrayprima -> . LBRACKET INT RBRACKET

    ID              reduce using rule 29 (type -> INTTYPE .)
    SEMICOLON       reduce using rule 29 (type -> INTTYPE .)
    LBRACKET        shift and go to state 41

    arrayprima                     shift and go to state 43

state 18

    (30) type -> FLOATTYPE .
    (35) array -> FLOATTYPE . arrayprima
    (37) arrayprima -> . LBRACKET INT RBRACKET

    ID              reduce using rule 30 (type -> FLOATTYPE .)
    SEMICOLON       reduce using rule 30 (type -> FLOATTYPE .)
    LBRACKET        shift and go to state 41

    arrayprima                     shift and go to state 44

state 19

    (32) type -> BOOLEANTYPE .

    ID              reduce using rule 32 (type -> BOOLEANTYPE .)
    SEMICOLON       reduce using rule 32 (type -> BOOLEANTYPE .)


state 20

    (25) vars -> VAR type . varsprima SEMICOLON
    (26) varsprima -> . ID
    (27) varsprima -> . ID COMMA varsprima
    (28) varsprima -> . empty
    (104) empty -> .

    ID              shift and go to state 46
    SEMICOLON       reduce using rule 104 (empty -> .)

    varsprima                      shift and go to state 45
    empty                          shift and go to state 47

state 21

    (33) type -> array .

    ID              reduce using rule 33 (type -> array .)
    SEMICOLON       reduce using rule 33 (type -> array .)


state 22

    (7) programfunction -> function . programfunction
    (7) programfunction -> . function programfunction
    (8) programfunction -> . empty
    (76) function -> . FUNCTION VOID ID LPAREN parameter RPAREN block
    (77) function -> . FUNCTION type ID LPAREN parameter RPAREN block
    (104) empty -> .

    FUNCTION        shift and go to state 23
    INTTYPE         reduce using rule 104 (empty -> .)

    function                       shift and go to state 22
    programfunction                shift and go to state 48
    empty                          shift and go to state 25

state 23

    (76) function -> FUNCTION . VOID ID LPAREN parameter RPAREN block
    (77) function -> FUNCTION . type ID LPAREN parameter RPAREN block
    (29) type -> . INTTYPE
    (30) type -> . FLOATTYPE
    (31) type -> . STRINGTYPE
    (32) type -> . BOOLEANTYPE
    (33) type -> . array
    (34) array -> . INTTYPE arrayprima
    (35) array -> . FLOATTYPE arrayprima
    (36) array -> . STRINGTYPE arrayprima

    VOID            shift and go to state 50
    INTTYPE         shift and go to state 17
    FLOATTYPE       shift and go to state 18
    STRINGTYPE      shift and go to state 16
    BOOLEANTYPE     shift and go to state 19

    type                           shift and go to state 49
    array                          shift and go to state 21

state 24

    (1) program -> PROGRAM ID SEMICOLON programvars programfunction . main
    (4) main -> . INTTYPE MAIN LPAREN RPAREN block

    INTTYPE         shift and go to state 51

    main                           shift and go to state 52

state 25

    (8) programfunction -> empty .

    INTTYPE         reduce using rule 8 (programfunction -> empty .)


state 26

    (66) factor -> constant .

    TIMES           reduce using rule 66 (factor -> constant .)
    DEVIDE          reduce using rule 66 (factor -> constant .)
    PLUS            reduce using rule 66 (factor -> constant .)
    MINUS           reduce using rule 66 (factor -> constant .)
    LESSER          reduce using rule 66 (factor -> constant .)
    GREATER         reduce using rule 66 (factor -> constant .)
    EQUAL           reduce using rule 66 (factor -> constant .)
    NOTEQUAL        reduce using rule 66 (factor -> constant .)
    LESSEROREQUAL   reduce using rule 66 (factor -> constant .)
    GREATEROREQUAL  reduce using rule 66 (factor -> constant .)
    AND             reduce using rule 66 (factor -> constant .)
    OR              reduce using rule 66 (factor -> constant .)
    SEMICOLON       reduce using rule 66 (factor -> constant .)
    RPAREN          reduce using rule 66 (factor -> constant .)
    RBRACKET        reduce using rule 66 (factor -> constant .)
    COMMA           reduce using rule 66 (factor -> constant .)


state 27

    (38) assignment -> ID push_id_operand ASSIGN push_operator singularexp2 . SEMICOLON

    SEMICOLON       shift and go to state 53


state 28

    (45) singularexp2 -> singularexp .
    (47) singularexp -> singularexp . AND expression
    (48) singularexp -> singularexp . OR expression

    COMMA           reduce using rule 45 (singularexp2 -> singularexp .)
    SEMICOLON       reduce using rule 45 (singularexp2 -> singularexp .)
    RBRACKET        reduce using rule 45 (singularexp2 -> singularexp .)
    RPAREN          reduce using rule 45 (singularexp2 -> singularexp .)
    AND             shift and go to state 54
    OR              shift and go to state 55


state 29

    (65) factor -> MINUS . constant
    (67) constant -> . ID constantprima
    (68) constant -> . FLOAT
    (69) constant -> . INT

    ID              shift and go to state 34
    FLOAT           shift and go to state 37
    INT             shift and go to state 36

    constant                       shift and go to state 56

state 30

    (64) factor -> PLUS . constant
    (67) constant -> . ID constantprima
    (68) constant -> . FLOAT
    (69) constant -> . INT

    ID              shift and go to state 34
    FLOAT           shift and go to state 37
    INT             shift and go to state 36

    constant                       shift and go to state 57

state 31

    (62) term -> factor .

    TIMES           reduce using rule 62 (term -> factor .)
    DEVIDE          reduce using rule 62 (term -> factor .)
    PLUS            reduce using rule 62 (term -> factor .)
    MINUS           reduce using rule 62 (term -> factor .)
    LESSER          reduce using rule 62 (term -> factor .)
    GREATER         reduce using rule 62 (term -> factor .)
    EQUAL           reduce using rule 62 (term -> factor .)
    NOTEQUAL        reduce using rule 62 (term -> factor .)
    LESSEROREQUAL   reduce using rule 62 (term -> factor .)
    GREATEROREQUAL  reduce using rule 62 (term -> factor .)
    AND             reduce using rule 62 (term -> factor .)
    OR              reduce using rule 62 (term -> factor .)
    COMMA           reduce using rule 62 (term -> factor .)
    SEMICOLON       reduce using rule 62 (term -> factor .)
    RPAREN          reduce using rule 62 (term -> factor .)
    RBRACKET        reduce using rule 62 (term -> factor .)


state 32

    (63) factor -> LPAREN . singularexp2 RPAREN
    (45) singularexp2 -> . singularexp
    (46) singularexp2 -> . NOT singularexp
    (47) singularexp -> . singularexp AND expression
    (48) singularexp -> . singularexp OR expression
    (49) singularexp -> . expression
    (50) expression -> . expression LESSER exp
    (51) expression -> . expression GREATER exp
    (52) expression -> . expression EQUAL exp
    (53) expression -> . expression NOTEQUAL exp
    (54) expression -> . expression LESSEROREQUAL exp
    (55) expression -> . expression GREATEROREQUAL exp
    (56) expression -> . exp
    (57) exp -> . exp PLUS term
    (58) exp -> . exp MINUS term
    (59) exp -> . term
    (60) term -> . term TIMES factor
    (61) term -> . term DEVIDE factor
    (62) term -> . factor
    (63) factor -> . LPAREN singularexp2 RPAREN
    (64) factor -> . PLUS constant
    (65) factor -> . MINUS constant
    (66) factor -> . constant
    (67) constant -> . ID constantprima
    (68) constant -> . FLOAT
    (69) constant -> . INT

    NOT             shift and go to state 39
    LPAREN          shift and go to state 32
    PLUS            shift and go to state 30
    MINUS           shift and go to state 29
    ID              shift and go to state 34
    FLOAT           shift and go to state 37
    INT             shift and go to state 36

    term                           shift and go to state 35
    constant                       shift and go to state 26
    singularexp2                   shift and go to state 58
    exp                            shift and go to state 38
    factor                         shift and go to state 31
    singularexp                    shift and go to state 28
    expression                     shift and go to state 40

state 33

    (84) read -> ID push_id_operand ASSIGN push_operator INPUT . SEMICOLON

    SEMICOLON       shift and go to state 59


state 34

    (67) constant -> ID . constantprima
    (70) constantprima -> . empty
    (71) constantprima -> . LBRACKET singularexp2 RBRACKET
    (104) empty -> .

    LBRACKET        shift and go to state 61
    TIMES           reduce using rule 104 (empty -> .)
    DEVIDE          reduce using rule 104 (empty -> .)
    PLUS            reduce using rule 104 (empty -> .)
    MINUS           reduce using rule 104 (empty -> .)
    LESSER          reduce using rule 104 (empty -> .)
    GREATER         reduce using rule 104 (empty -> .)
    EQUAL           reduce using rule 104 (empty -> .)
    NOTEQUAL        reduce using rule 104 (empty -> .)
    LESSEROREQUAL   reduce using rule 104 (empty -> .)
    GREATEROREQUAL  reduce using rule 104 (empty -> .)
    AND             reduce using rule 104 (empty -> .)
    OR              reduce using rule 104 (empty -> .)
    SEMICOLON       reduce using rule 104 (empty -> .)
    RPAREN          reduce using rule 104 (empty -> .)
    RBRACKET        reduce using rule 104 (empty -> .)
    COMMA           reduce using rule 104 (empty -> .)

    constantprima                  shift and go to state 60
    empty                          shift and go to state 62

state 35

    (59) exp -> term .
    (60) term -> term . TIMES factor
    (61) term -> term . DEVIDE factor

    PLUS            reduce using rule 59 (exp -> term .)
    MINUS           reduce using rule 59 (exp -> term .)
    LESSER          reduce using rule 59 (exp -> term .)
    GREATER         reduce using rule 59 (exp -> term .)
    EQUAL           reduce using rule 59 (exp -> term .)
    NOTEQUAL        reduce using rule 59 (exp -> term .)
    LESSEROREQUAL   reduce using rule 59 (exp -> term .)
    GREATEROREQUAL  reduce using rule 59 (exp -> term .)
    AND             reduce using rule 59 (exp -> term .)
    OR              reduce using rule 59 (exp -> term .)
    SEMICOLON       reduce using rule 59 (exp -> term .)
    RPAREN          reduce using rule 59 (exp -> term .)
    RBRACKET        reduce using rule 59 (exp -> term .)
    COMMA           reduce using rule 59 (exp -> term .)
    TIMES           shift and go to state 64
    DEVIDE          shift and go to state 63


state 36

    (69) constant -> INT .

    TIMES           reduce using rule 69 (constant -> INT .)
    DEVIDE          reduce using rule 69 (constant -> INT .)
    PLUS            reduce using rule 69 (constant -> INT .)
    MINUS           reduce using rule 69 (constant -> INT .)
    LESSER          reduce using rule 69 (constant -> INT .)
    GREATER         reduce using rule 69 (constant -> INT .)
    EQUAL           reduce using rule 69 (constant -> INT .)
    NOTEQUAL        reduce using rule 69 (constant -> INT .)
    LESSEROREQUAL   reduce using rule 69 (constant -> INT .)
    GREATEROREQUAL  reduce using rule 69 (constant -> INT .)
    AND             reduce using rule 69 (constant -> INT .)
    OR              reduce using rule 69 (constant -> INT .)
    SEMICOLON       reduce using rule 69 (constant -> INT .)
    RPAREN          reduce using rule 69 (constant -> INT .)
    RBRACKET        reduce using rule 69 (constant -> INT .)
    COMMA           reduce using rule 69 (constant -> INT .)


state 37

    (68) constant -> FLOAT .

    TIMES           reduce using rule 68 (constant -> FLOAT .)
    DEVIDE          reduce using rule 68 (constant -> FLOAT .)
    PLUS            reduce using rule 68 (constant -> FLOAT .)
    MINUS           reduce using rule 68 (constant -> FLOAT .)
    LESSER          reduce using rule 68 (constant -> FLOAT .)
    GREATER         reduce using rule 68 (constant -> FLOAT .)
    EQUAL           reduce using rule 68 (constant -> FLOAT .)
    NOTEQUAL        reduce using rule 68 (constant -> FLOAT .)
    LESSEROREQUAL   reduce using rule 68 (constant -> FLOAT .)
    GREATEROREQUAL  reduce using rule 68 (constant -> FLOAT .)
    AND             reduce using rule 68 (constant -> FLOAT .)
    OR              reduce using rule 68 (constant -> FLOAT .)
    SEMICOLON       reduce using rule 68 (constant -> FLOAT .)
    RPAREN          reduce using rule 68 (constant -> FLOAT .)
    RBRACKET        reduce using rule 68 (constant -> FLOAT .)
    COMMA           reduce using rule 68 (constant -> FLOAT .)


state 38

    (56) expression -> exp .
    (57) exp -> exp . PLUS term
    (58) exp -> exp . MINUS term

    LESSER          reduce using rule 56 (expression -> exp .)
    GREATER         reduce using rule 56 (expression -> exp .)
    EQUAL           reduce using rule 56 (expression -> exp .)
    NOTEQUAL        reduce using rule 56 (expression -> exp .)
    LESSEROREQUAL   reduce using rule 56 (expression -> exp .)
    GREATEROREQUAL  reduce using rule 56 (expression -> exp .)
    AND             reduce using rule 56 (expression -> exp .)
    OR              reduce using rule 56 (expression -> exp .)
    RBRACKET        reduce using rule 56 (expression -> exp .)
    COMMA           reduce using rule 56 (expression -> exp .)
    RPAREN          reduce using rule 56 (expression -> exp .)
    SEMICOLON       reduce using rule 56 (expression -> exp .)
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66


state 39

    (46) singularexp2 -> NOT . singularexp
    (47) singularexp -> . singularexp AND expression
    (48) singularexp -> . singularexp OR expression
    (49) singularexp -> . expression
    (50) expression -> . expression LESSER exp
    (51) expression -> . expression GREATER exp
    (52) expression -> . expression EQUAL exp
    (53) expression -> . expression NOTEQUAL exp
    (54) expression -> . expression LESSEROREQUAL exp
    (55) expression -> . expression GREATEROREQUAL exp
    (56) expression -> . exp
    (57) exp -> . exp PLUS term
    (58) exp -> . exp MINUS term
    (59) exp -> . term
    (60) term -> . term TIMES factor
    (61) term -> . term DEVIDE factor
    (62) term -> . factor
    (63) factor -> . LPAREN singularexp2 RPAREN
    (64) factor -> . PLUS constant
    (65) factor -> . MINUS constant
    (66) factor -> . constant
    (67) constant -> . ID constantprima
    (68) constant -> . FLOAT
    (69) constant -> . INT

    LPAREN          shift and go to state 32
    PLUS            shift and go to state 30
    MINUS           shift and go to state 29
    ID              shift and go to state 34
    FLOAT           shift and go to state 37
    INT             shift and go to state 36

    term                           shift and go to state 35
    constant                       shift and go to state 26
    exp                            shift and go to state 38
    factor                         shift and go to state 31
    singularexp                    shift and go to state 67
    expression                     shift and go to state 40

state 40

    (49) singularexp -> expression .
    (50) expression -> expression . LESSER exp
    (51) expression -> expression . GREATER exp
    (52) expression -> expression . EQUAL exp
    (53) expression -> expression . NOTEQUAL exp
    (54) expression -> expression . LESSEROREQUAL exp
    (55) expression -> expression . GREATEROREQUAL exp

    AND             reduce using rule 49 (singularexp -> expression .)
    OR              reduce using rule 49 (singularexp -> expression .)
    RPAREN          reduce using rule 49 (singularexp -> expression .)
    COMMA           reduce using rule 49 (singularexp -> expression .)
    SEMICOLON       reduce using rule 49 (singularexp -> expression .)
    RBRACKET        reduce using rule 49 (singularexp -> expression .)
    LESSER          shift and go to state 72
    GREATER         shift and go to state 69
    EQUAL           shift and go to state 71
    NOTEQUAL        shift and go to state 68
    LESSEROREQUAL   shift and go to state 70
    GREATEROREQUAL  shift and go to state 73


state 41

    (37) arrayprima -> LBRACKET . INT RBRACKET

    INT             shift and go to state 74


state 42

    (36) array -> STRINGTYPE arrayprima .

    ID              reduce using rule 36 (array -> STRINGTYPE arrayprima .)
    SEMICOLON       reduce using rule 36 (array -> STRINGTYPE arrayprima .)


state 43

    (34) array -> INTTYPE arrayprima .

    ID              reduce using rule 34 (array -> INTTYPE arrayprima .)
    SEMICOLON       reduce using rule 34 (array -> INTTYPE arrayprima .)


state 44

    (35) array -> FLOATTYPE arrayprima .

    ID              reduce using rule 35 (array -> FLOATTYPE arrayprima .)
    SEMICOLON       reduce using rule 35 (array -> FLOATTYPE arrayprima .)


state 45

    (25) vars -> VAR type varsprima . SEMICOLON

    SEMICOLON       shift and go to state 75


state 46

    (26) varsprima -> ID .
    (27) varsprima -> ID . COMMA varsprima

    SEMICOLON       reduce using rule 26 (varsprima -> ID .)
    COMMA           shift and go to state 76


state 47

    (28) varsprima -> empty .

    SEMICOLON       reduce using rule 28 (varsprima -> empty .)


state 48

    (7) programfunction -> function programfunction .

    INTTYPE         reduce using rule 7 (programfunction -> function programfunction .)


state 49

    (77) function -> FUNCTION type . ID LPAREN parameter RPAREN block

    ID              shift and go to state 77


state 50

    (76) function -> FUNCTION VOID . ID LPAREN parameter RPAREN block

    ID              shift and go to state 78


state 51

    (4) main -> INTTYPE . MAIN LPAREN RPAREN block

    MAIN            shift and go to state 79


state 52

    (1) program -> PROGRAM ID SEMICOLON programvars programfunction main .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON programvars programfunction main .)


state 53

    (38) assignment -> ID push_id_operand ASSIGN push_operator singularexp2 SEMICOLON .
